--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
@@ -14,16 +13,13 @@
 
     <section class="landing__section">
       <div class="landing__section-recentScores">
-        <div>
+        <div class='landing__section-recentScores-flex'>
           <h3 class='landing__section-recentScores-title'>Recent Scores</h3>
           <button class='landing__section-recentScores-button'>Refresh</button>
         </div>
 
-        <table>
-          <tr>
-            <td>Name :</td>
-            <td>20</td>
-          </tr>
+        <table class='table'>
+
 
         </table>
       </div>
