--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
       </div>
       <div class="landing__section-addScore">
         <h3 class='landing__section-addScore-title'>Add your score</h3>
-        <input type="text" placeholder='Your name'>
-        <input type="text" placeholder='Your score'>
+        <input type="text" placeholder='Your name' class='landing__section-addScore-name'>
+        <input type="text" placeholder='Your score' class='landing__section-addScore-score'>
         <button class='landing__section-addScore-button'>Submit</button>
       </div>
     </section>
